--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="css.css">
 <link href="https://fonts.googleapis.com/css?family=Raleway:400,600" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
-<!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
